# finter

./: .gitignore  AUTHORS  Makefile.am  README.md  environment.yaml
finter/: finter.h  finter_reader.h  finter_reader_bzip2.cc  finter_reader_bzip2.h  finter_reader_flat.cc  finter_reader_flat.h  finter_reader_gzip.cc  finter_reader_gzip.h  finter_reader_parent.h  finter_writer.h  finter_writer_bzip2.cc  finter_writer_bzip2.h  finter_writer_flat.cc  finter_writer_flat.h  finter_writer_gzip.cc  finter_writer_gzip.h  finter_writer_parent.h  helper.h
